[package]
name = "rget_category"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
regex = "1.10.6"
libc = "0.2.158"
reqwest = { version = "0.12.7", features = ["blocking", "rustls-tls"] }
scraper = "0.20.0"
tokio = { version = "1.39.3", features = ["full"] }
